force-app/main/default/objects/Project_Assignment__c/fields/Developer__c.field-meta.xml
<CustomField>
    <fullName>Developer__c</fullName>
    <description>dev</description>
    <label>Developer</label>
    <referenceTo>Developer__c</referenceTo>
    <relationshipLabel>Project Assignments</relationshipLabel>
    <relationshipName>Project_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>