force-app/main/default/objects/Project_Assignment__c/fields/Project_Assignment_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Assignment_Number__c</fullName>
    <description>Format: PRA-{00000}</description>
    <displayFormat>PRA-{00000}</displayFormat>
    <label>Project Assignment Number</label>
    <type>AutoNumber</type>
</CustomField>